Fix the width size of the bar container so it doesn't overflow its parent

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ input[type='radio']:checked:after {
 
 /* BAR GRAPH STYLES */
 .barContainer {
-  width: 100%;
+  width: 95%;
   background-color: #88878aa1;
   padding: 4px;
   margin: 5px 20px;
